--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -30,6 +30,24 @@
       <Folder Include="Donation\Domain\Model\ValueObjects\" />
       <Folder Include="Exchange\Domain\Model\Commnads\ProductCommands\" />
       <Folder Include="Exchange\Domain\Model\ValueObjects\" />
+      <Folder Include="IAM\Application\Internal\CommandServices\" />
+      <Folder Include="IAM\Application\Internal\OutboundServices\" />
+      <Folder Include="IAM\Application\Internal\QueryServices\" />
+      <Folder Include="IAM\Domain\Model\Aggregates\" />
+      <Folder Include="IAM\Domain\Model\Commands\" />
+      <Folder Include="IAM\Domain\Model\Queries\" />
+      <Folder Include="IAM\Domain\Services\" />
+      <Folder Include="IAM\Domain\Repositories\" />
+      <Folder Include="IAM\Infrastructure\Hashing\BCrypt\Services\" />
+      <Folder Include="IAM\Infrastructure\Persistence\EFC\Repositories\" />
+      <Folder Include="IAM\Infrastructure\Pipeline\Middleware\Attributes\" />
+      <Folder Include="IAM\Infrastructure\Pipeline\Middleware\Components\" />
+      <Folder Include="IAM\Infrastructure\Pipeline\Middleware\Extensions\" />
+      <Folder Include="IAM\Infrastructure\Tokens\JWT\Configuration\" />
+      <Folder Include="IAM\Infrastructure\Tokens\JWT\Services\" />
+      <Folder Include="IAM\Interfaces\ACL\Services\" />
+      <Folder Include="IAM\Interfaces\REST\Resources\" />
+      <Folder Include="IAM\Interfaces\REST\Transform\" />
     </ItemGroup>
 
 </Project>
