--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -48,6 +48,18 @@
       <Folder Include="IAM\Interfaces\ACL\Services\" />
       <Folder Include="IAM\Interfaces\REST\Resources\" />
       <Folder Include="IAM\Interfaces\REST\Transform\" />
+      <Folder Include="Profiles\Application\Internal\CommandServices\" />
+      <Folder Include="Profiles\Application\Internal\QueryServices\" />
+      <Folder Include="Profiles\Domain\Model\Aggregates\" />
+      <Folder Include="Profiles\Domain\Model\Commands\" />
+      <Folder Include="Profiles\Domain\Model\Queries\" />
+      <Folder Include="Profiles\Domain\Model\ValueObjects\" />
+      <Folder Include="Profiles\Domain\Repositories\" />
+      <Folder Include="Profiles\Domain\Services\" />
+      <Folder Include="Profiles\Infrastructure\Persistence\EFC\Repositories\" />
+      <Folder Include="Profiles\Interfaces\ACL\Services\" />
+      <Folder Include="Profiles\Interfaces\REST\Resources\" />
+      <Folder Include="Profiles\Interfaces\REST\Transform\" />
     </ItemGroup>
 
 </Project>
