--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "TokenSettings": {
+    "Secret": "Place here your secret for token generation"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=12345678;database=plantilla"
+    "DefaultConnection": "server=localhost;user=root;password=12345678;database=cambiazo"
   },
   "Logging": {
     "LogLevel": {
