Fix: connection to database
In this part, we fixed the connection to database.

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "Place here your secret for token generation"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=12345678;database=cambiazo"
+    "DefaultConnection": "server=azure-cambiazo-db.mysql.database.azure.com;user=db_cambiazo;password=Cambiazo123;database=cambiazo"
   },
   "Logging": {
     "LogLevel": {
