Fix: connetion database
In this part we fixed the connection database.

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "Place here your secret for token generation"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=azure-cambiazo-db.mysql.database.azure.com;user=db_cambiazo;password=Cambiazo123;database=cambiazo"
+    "DefaultConnection": "Server=azure-cambiazo-db.mysql.database.azure.com;UserID=db_cambiazo;Password=Cambiazo123;Database=cambiazo;SslMode=Required;"
   },
   "Logging": {
     "LogLevel": {
