--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "Place here your secret for token generation"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=azure-cambiazo-db.mysql.database.azure.com;UserID=db_cambiazo;Password=Cambiazo123;Database=cambiazo;SslMode=Required;"
+    "DefaultConnection": "Server=\"azure-cambiazo-db.mysql.database.azure.com\";UserID=\"db_cambiazo\";Password=\"Cambiazo123\";Database=\"cambiazo\";SslMode=\"Required\";"
   },
   "Logging": {
     "LogLevel": {
